Pantalla welcome primer diseño, iconos, y estilo para boton primario

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,49 @@
-<p>welcome works!</p>
+<header>
+    <img src="img/Bolsi.svg" alt="Bolsi Logo">
+    <h1 class="title-xlarge">¡Bienvenido a Bolsi!</h1>
+    <p class="text-medium">Tu bolsillo inteligente para planificar, registrar y controlar tus finanzas personales de
+        forma simple, privada y
+        visual.</p>
+</header>
+<div class="sections">
+    <section>
+        <h2 class="title-large">💰 Bolsillos</h2>
+        <p class="text-medium">Distribuye tu dinero en Bolsillos como Necesidades, Gustos, Ahorros, o crea los tuyos
+            propios. Organiza tus
+            finanzas visualmente.</p>
+    </section>
+    <section>
+        <h2 class="title-large">📈 Ingresos</h2>
+        <p class="text-medium">Registra todos tus ingresos: sueldos, quincenas, ventas, inversiones... ¡Los que quieras!
+            Puedes definir
+            frecuencia y nombre personalizado.</p>
+    </section>
+    <section>
+        <h2 class="title-large">🛒 Compras</h2>
+        <p class="text-medium">Registra tus gastos diarios fácilmente. Selecciona el bolsillo y método de pago: efectivo
+            o tarjeta. Todo queda
+            registrado al instante.</p>
+    </section>
+    <section>
+        <h2 class="title-large">⌛ Compras Rápidas</h2>
+        <p class="text-medium">Usa tus gastos predefinidos para registrar con un solo toque. Más velocidad, menos
+            esfuerzo.</p>
+    </section>
+    <section>
+        <h2 class="title-large">🛡️ Privacidad y Seguridad</h2>
+        <p class="text-medium">Tus datos se almacenan localmente en tu dispositivo para garantizar máxima privacidad.
+            Nadie más tiene acceso a
+            tu información financiera.</p>
+    </section>
+    <section>
+        <h2 class="title-large">📊 Panel Financiero</h2>
+        <p class="text-medium">Consulta de forma clara cómo se distribuyen tus ingresos y en qué estás gastando.
+            Visualiza gráficas por Bolsillos, revisa tus compras del mes, tus pagos con tarjeta, cuotas activas y mantén
+            el control total de tus finanzas en un solo lugar.</p>
+    </section>
+</div>
+<button href="registro.html" class="btn-primary">Empezar</button>
+
+<footer>
+    &copy; 2025 Bolsi App – Tu bolsillo inteligente
+</footer>
