Refinamiento de base de datos

--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -29,7 +29,7 @@ section {
 
 section .title-large {
   font-weight: 600;
-  color: var(--primary-color);
+  color: var(--primary-hover-color);
 }
 
 .btn-primary {
