Navegacion a main, y redireccionamiento a income si no tiene configurados sus datos.

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -42,7 +42,7 @@
             el control total de tus finanzas en un solo lugar.</p>
     </section>
 </div>
-<button href="registro.html" class="btn-primary">Empezar</button>
+<button href="registro.html" class="btn-primary" (click)="$event.preventDefault(); start()">Empezar</button>
 
 <footer>
     &copy; 2025 Bolsi App – Tu bolsillo inteligente
