--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -6,36 +6,36 @@
         visual.</p>
 </header>
 <div class="sections">
-    <section>
+    <section class="card">
         <h2 class="title-large">💰 Bolsillos</h2>
         <p class="text-medium">Distribuye tu dinero en Bolsillos como Necesidades, Gustos, Ahorros, o crea los tuyos
             propios. Organiza tus
             finanzas visualmente.</p>
     </section>
-    <section>
+    <section class="card">
         <h2 class="title-large">📈 Ingresos</h2>
         <p class="text-medium">Registra todos tus ingresos: sueldos, quincenas, ventas, inversiones... ¡Los que quieras!
             Puedes definir
             frecuencia y nombre personalizado.</p>
     </section>
-    <section>
+    <section class="card">
         <h2 class="title-large">🛒 Compras</h2>
         <p class="text-medium">Registra tus gastos diarios fácilmente. Selecciona el bolsillo y método de pago: efectivo
             o tarjeta. Todo queda
             registrado al instante.</p>
     </section>
-    <section>
+    <section class="card">
         <h2 class="title-large">⌛ Compras Rápidas</h2>
         <p class="text-medium">Usa tus gastos predefinidos para registrar con un solo toque. Más velocidad, menos
             esfuerzo.</p>
     </section>
-    <section>
+    <section class="card">
         <h2 class="title-large">🛡️ Privacidad y Seguridad</h2>
         <p class="text-medium">Tus datos se almacenan localmente en tu dispositivo para garantizar máxima privacidad.
             Nadie más tiene acceso a
             tu información financiera.</p>
     </section>
-    <section>
+    <section class="card">
         <h2 class="title-large">📊 Panel Financiero</h2>
         <p class="text-medium">Consulta de forma clara cómo se distribuyen tus ingresos y en qué estás gastando.
             Visualiza gráficas por Bolsillos, revisa tus compras del mes, tus pagos con tarjeta, cuotas activas y mantén
