--- a/src/app/pages/main/pockets/pockets.component.html
+++ b/src/app/pages/main/pockets/pockets.component.html
@@ -1,1 +1,18 @@
-<p>pockets works!</p>
+@if (pockets$ | async; as pockets) {
+<div>
+    @for (pocket of pockets; track pocket.id) {
+    <div class="card">
+        <h3>{{pocket.name}}</h3>
+        <h3>{{pocket.percentEstimated}}</h3>
+    </div>
+    }@empty {
+    <div>
+        <h2>Registra al menos un ingreso.</h2>
+    </div>
+    }
+</div>
+} @else {
+<div>
+    <h1>Error al obtener tus bolsillos.</h1>
+</div>
+}
