--- a/src/app/pages/main/income/income.component.scss
+++ b/src/app/pages/main/income/income.component.scss
@@ -1,16 +1,21 @@
+app-add-element .card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .form-add {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    margin-bottom: 1rem;
-
     #name {
         flex: 2;
     }
+
     #amount {
         flex: 1;
     }
-    select {
+    #frecuency {
         flex: 1;
     }
 }
@@ -18,7 +23,13 @@
 .buttons-add {
     display: flex;
     gap: 1rem;
+
     button {
         flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        padding: 0.5rem;
     }
 }
