--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,19 +4,20 @@
   color-scheme: light dark;
 
   --background-color: light-dark(#F8FAFC, #111922);
-  --background-inputs-color: light-dark(#E8EDF2, #243347);
+  --background-card-color: light-dark(#E8EDF2, #243347);
 
   --primary-color: light-dark(#126cbf, #1A78E5);
   --secundary-color: light-dark(#3AB795, #248169);
   --contrast-color: light-dark(#F4C430, #c99f22);
-  
+  --danger-color: light-dark(#F87171, #EF4444);
+
   --primary-hover-color: light-dark(#3d83c5, #63a0e6);
 
   --primary-shadow-color: light-dark(#126bbf4f, #1a79e550);
-  
+
   --error-color: light-dark(#EF4444, #F87171);
   --text-color: light-dark(#1E293B, #FFFFFF);
-  --placeholder-color: light-dark(#4F7096, #94ABC7);
+  --text-secundary-color: light-dark(#4F7096, #94ABC7);
 
   --max-width: 1200px;
 }
@@ -127,11 +128,8 @@ html {
   color: var(--error-color);
 }
 
-.btn-primary {
+.btn {
   display: block;
-  margin: 2rem auto;
-  padding: 1rem 2rem;
-  background-color: var(--primary-color);
   color: #fff;
   border: none;
   border-radius: 14px;
@@ -144,6 +142,18 @@ html {
   outline: none;
   -webkit-tap-highlight-color: transparent;
   user-select: none;
+  &-primary {
+    @extend .btn;
+    background-color: var(--primary-color);
+  }
+  &-success {
+    @extend .btn;
+    background-color: var(--secundary-color);
+  }
+  &-danger {
+    @extend .btn;
+    background-color: var(--danger-color);
+  }
 }
 
 @media (hover: hover) and (pointer: fine) {
@@ -153,8 +163,14 @@ html {
 }
 
 .card {
-  background: var(--background-inputs-color);
+  background: var(--background-card-color);
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 2px 8px var(--primary-shadow-color);
+}
+
+.input {
+  padding: 0.8rem;
+  border: none;
+  border-radius: 20px;
 }
