--- a/src/app/pages/main/income/income.component.scss
+++ b/src/app/pages/main/income/income.component.scss
@@ -20,15 +20,15 @@
 }
 
 @media (min-width: 600px) {
-  .content {
-    grid-template-columns: repeat(2, 1fr);
-  }
+    .content {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media (min-width: 900px) {
-  .content {
-    grid-template-columns: repeat(3, 1fr);
-  }
+    .content {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .card.income {
@@ -37,7 +37,22 @@
     padding: 1rem;
 }
 
-app-add-element .card {
+.actions {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+
+    button {
+        border-radius: 50%;
+        width: 2rem;
+        height: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
