--- a/src/app/pages/main/income/income.component.scss
+++ b/src/app/pages/main/income/income.component.scss
@@ -2,12 +2,21 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    flex: 1 1 auto;
+    overflow: auto;
+    height: 0;
+    margin: 8px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+}
+
+.scroll {
+    overflow-y: auto;
+    flex: 1 1 auto;
 }
 
 .content {
@@ -17,6 +26,7 @@
     gap: 1rem;
     align-items: start;
     width: 95%;
+    padding: 8px;
 }
 
 @media (min-width: 600px) {
