--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@
   --max-width: 1200px;
 }
 
+body {
+  margin: 0;
+}
+
 html {
   background-color: var(--background-color);
   color: var(--text-color);
