--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,3 +1,10 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 8px;
+}
+
 header {
   text-align: center;
   padding: 2rem 1rem 1rem;
@@ -15,7 +22,7 @@ header img {
 
 .sections {
   max-width: var(--max-width);
-  margin: 0 auto;
+  margin: 0 8px;
   display: grid;
   gap: 1rem;
 }
