nav-bar creado y menu, se agrega la funcion de cerrar el menu y el formulario de editar en incomes

--- a/src/app/pages/main/income/income.component.html
+++ b/src/app/pages/main/income/income.component.html
@@ -6,8 +6,8 @@
 <div class="scroll" #scroll>
     <div class="content">
         @for (income of incomes.list; track income.id) {
-        <div #item class="card income" [class.form]="incomeEditId === income.id" [@animate]>
-            @if (incomeEditId === income.id) {
+        <div #item class="card income" [class.form]="incomeEdit === item" [@animate]>
+            @if (incomeEdit === item) {
             <h3 class="title-small">Editar ingreso menusal</h3>
             <div class="form">
                 <input class="text-medium input" type="text" name="name" id="name" placeholder="Nombre/Alias/Concepto"
