--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -3,3 +3,66 @@
     display: flex;
     flex-direction: column;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+    color: var(--background-color);
+
+    img {
+        padding: 5px;
+    }
+
+    .title-medium {
+        font-weight: 600;
+    }
+
+    button {
+        background-color: transparent;
+        border: none;
+        height: 100%;
+        color: var(--background-color);
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        user-select: none;
+        cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
+        font-weight: 500;
+    }
+
+    mat-icon {
+        font-size: 25px;
+        color: var(--background-color);
+    }
+
+    .content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .menu {
+        position: fixed;
+        background-color: var(--primary-color);
+        right: 0px;
+        top: 49px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+
+        button {
+            padding: 10px;
+            width: 100%;
+        }
+
+        button:not(:last-child) {
+            border-bottom: 2px solid var(--background-color);
+        }
+
+        button:last-child {
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+    }
+}
