--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 :root {
   color-scheme: light dark;
 
-  --background-color: light-dark(#F8FAFC, #111922);
+  --background-color: light-dark(rgb(248, 250, 252), rgb(17, 25, 34));
   --background-card-color: light-dark(#E8EDF2, #243347);
 
   --primary-color: light-dark(#126cbf, #1A78E5);
