Pantalla pockets casi terminada

--- a/src/app/pages/main/income/income.component.html
+++ b/src/app/pages/main/income/income.component.html
@@ -11,10 +11,10 @@
             <h3 class="title-small">Editar ingreso menusal</h3>
             <div class="form">
                 <input class="text-medium input" type="text" name="name" id="name" placeholder="Nombre/Alias/Concepto"
-                    [formControl]="newIncomeForm.controls.name" tabindex="1"
+                    [formControl]="incomeForm.controls.name" tabindex="1" maxlength="30"
                     (keydown.enter)="$event.preventDefault(); amount.focus()">
                 <input #amount class="text-medium input" type="tel" name="amount" id="amount" placeholder="Cantidad"
-                    [formControl]="newIncomeForm.controls.amountEstimated" appCurrency tabindex="2"
+                    [formControl]="incomeForm.controls.amountEstimated" appCurrency tabindex="2" maxlength="11"
                     (keydown.enter)="$event.preventDefault(); submitEdit(income.id!)">
             </div>
             <div class="buttons-add">
@@ -52,14 +52,14 @@
             </div>
         </div>
         }
-        <app-add-element label="Agregar ingreso mensual" #addElement (onClose)="newIncomeForm.reset();" [@animate]>
+        <app-add-element label="Agregar ingreso mensual" #addElement (onClose)="incomeForm.reset();" [@animate]>
             <div class="card form">
                 <h3 class="title-small">Nuevo ingreso menusal</h3>
                 <div class="form">
                     <input class="text-medium input" type="text" name="name" id="name" tabindex="0"
-                        placeholder="Nombre/Alias/Concepto" [formControl]="newIncomeForm.controls.name">
+                        placeholder="Nombre/Alias/Concepto" [formControl]="incomeForm.controls.name">
                     <input class="text-medium input" type="tel" name="amount" id="amount" placeholder="Cantidad"
-                        [formControl]="newIncomeForm.controls.amountEstimated" appCurrency tabindex="1">
+                        [formControl]="incomeForm.controls.amountEstimated" appCurrency tabindex="1">
                 </div>
                 <div class="buttons-add">
                     <button class="btn-danger" (click)="$event.preventDefault(); cancelNew(addElement)">
