--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,10 +159,8 @@ html {
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
-  .btn-primary:hover {
-    background-color: var(--primary-hover-color);
-  }
+.btn:disabled {
+  background-color: gray;
 }
 
 .card {
